--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+*{
+  margin:0%;
+  padding:0%;
+}
+.uploadImg{
+  position: fixed;
+    border-radius: 50%;
+    height: 32%;
+    right: 10%;
+    width: 15%;
+    top: 23%;
+    z-index: 10;
+}
 .App {
   text-align: center;
 }
@@ -14,6 +27,25 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+.Box1 {
+  display: inline-block;
+    left: 64%;
+    width: 10.5%;
+    height: 6rem;
+    
+    top: 33.4%;
+}
+
+.Box2 {
+  position: fixed;
+  display: inline-block;
+  left: 76.2%;
+  width: 10.6%;
+  top: 33.4%;
+  height: 6rem;
+  z-index: 1;
+
 }
 
 .App-header {
@@ -58,4 +90,177 @@
     transform: rotate(360deg);
   }
 }
+/* DropDown */
+.dropbtn {
+  background-color: #4CAF50;
+  transition: 0.3s;
+  color: white;
+  padding: 16px;
+  padding-right: 32px;
+  font-size: 16px;
+  border: none;
+  cursor: crosshair;
+  border-radius: 2px;
+}
 
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  transition: all 1s ease-in;
+  overflow:hidden;
+  height:0;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+  color:  #000000;
+
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  height:200px;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+  color:  #000000;
+  transition: 0.3s;
+}
+
+.dropdown1 {
+  position: fixed;
+  top: 150px;
+  left: 50px;
+
+}
+
+.dropdown2 {
+  position: fixed;
+  top: 150px;
+  left: 220px;
+
+}
+
+.dropdown3 {
+  position: fixed;
+  top: 150px;
+  left: 615px;
+
+}
+
+.dropdown4 {
+  position: fixed;
+  top: 150px;
+  left: 1003px;
+
+}
+
+.pageheading {
+  font-family: verdana;
+  font-size: 85% ;
+  position: absolute;
+  left: 50px;
+  top: 210px;
+  background-color: #4CAF50;
+  border-radius: 6px;
+}
+
+.pageparagraph {
+  font-family: verdana;
+  text-align: justify;
+  position: absolute;
+  left: 50px;
+  top: 290px;
+  right: 685px;
+  background-color: #4CAF50;
+  border-radius: 6px;
+}
+
+.logo {
+  font-family: verdana;
+  font-size: 150%;
+  color: white;
+  position: fixed;
+  top: 10px;
+  left: 50px;
+  background-color: #4CAF50;
+  border-radius: 6px;
+}
+
+body {
+  /* background-image: url("ForestBackground.jpg"); */
+  background-repeat: no-repeat;
+}
+
+
+.arrow1 {
+  position: fixed;
+  top: 166px;
+  left: 185;
+  transform: rotate(0deg);
+  transition: 0.3s;
+}
+
+.arrow2 {
+  position: fixed;
+  top: 166px;
+  left: 580;
+  transform: rotate(0deg);
+  transition: 0.3s;
+}
+
+.arrow3 {
+  position: fixed;
+  top: 166px;
+  left: 970;
+  transform: rotate(0deg);
+  transition: 0.3s;
+}
+
+.arrow4 {
+  position: fixed;
+  top: 166px;
+  left: 1130;
+  transform: rotate(0deg);
+  transition: 0.3s;
+}
+
+
+.dropdown:hover .arrow1{
+transform: rotate(90deg);
+transition: 0.3s;
+}
+
+.dropdown:hover .arrow2{
+transform: rotate(90deg);
+transition: 0.3s;
+}
+
+.dropdown:hover .arrow3{
+transform: rotate(90deg);
+transition: 0.3s;
+}
+
+.dropdown:hover .arrow4{
+transform: rotate(90deg);
+transition: 0.3s;
+}
+.addtobag:hover{
+  background-color: white;
+  color:#194376
+}
