--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,14 @@
     border: none;
     background: transparent;
 }
+.sort{
+  
+  width: 8rem;
+    font-size: 1ren;
+    left: 59%;
+    top: 27.9%;
+
+}
 .uploadImg{
   position: fixed;
     border-radius: 50%;
@@ -41,7 +49,7 @@
     width: 10.5%;
     height: 6rem;
     
-    top: 33.4%;
+    top: 25.1%;
 }
 
 .Box2 {
@@ -49,7 +57,7 @@
   display: inline-block;
   left: 76.2%;
   width: 10.6%;
-  top: 33.4%;
+  top: 25.1%;
   height: 6rem;
   z-index: 1;
 
