--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@
 }
 .Box1 {
   display: inline-block;
-    left: 64%;
+  left: 76.3%;
     width: 10.5%;
     height: 6rem;
     
@@ -55,7 +55,7 @@
 .Box2 {
   position: fixed;
   display: inline-block;
-  left: 76.2%;
+  left: 88.6%;
   width: 10.6%;
   top: 25.1%;
   height: 6rem;
@@ -278,4 +278,13 @@ transition: 0.3s;
 .addtobag:hover{
   background-color: white;
   color:#194376
+}
+.setImage{
+  border-radius: 55%;
+    /* width: 50%; */
+    transition: 8%;
+    padding: 1rem;
+    border: solid;
+    /* border-color: setFile(URL.createObjectURL(e.target.files[0])); */
+    border-color: #194376;
 }
