--- a/src/App.css
+++ b/src/App.css
@@ -321,20 +321,20 @@ transition: 0.3s;
 
 }
 .Box1{
-  display: inline-block;
-    left: 2.5%;
+  /* display: inline-block; */
+    /* left: 2.5%;
     width: 45%;
     /* height: 6rem; */
-    top: 32.3%;
+    /* top: 32.3%;  */
 }
 .Box2 {
-  position: fixed;
-  display: inline-block;
+  /* position: fixed; */
+  /* display: inline-block;
   left: 52.6%;
   width: 45%;
   top: 32.5%;
   height: 6rem;
-  z-index: 10;
+  z-index: 10; */
 }
  
 }
