--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,10 @@
   height: 6rem;
   /* z-index: 10; */
 }
-
+.drop-shadow-2xlA {
+  --tw-drop-shadow: drop-shadow(0 25px 25px rgb(0 0 0 / 0.3));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
